jwp - reconciling terraform with current state.

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,11 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+########################################
+# Terraform bits
+########################################
+
+tf/.terraform.lock.hcl
+tf/.terraform/modules/
+tf/.terraform/providers/
+tf/.terraform/terraform.tfstate
